# Robot_quadruped_sensor_nework

./: README.md
RUP/: Requerimientos Funcionales y No funcionales.docx
RUP/diagramas de secuencia/: Comuniacion_LiDar.txt  Comunicacion_camara.txt  Comunicacion_sensores_.txt  Comunicaciòn_mic.txt  Comunicación entre Arduino Nano y Raspberry.txt  Comunicación entre Arduino Nano.txt  Comunicación_GPS.txt  Comunicación_orientación.txt  Comunicación_sensor_fuerza.txt  Comunicación_voltageycorriente.txt  Detección de Gases.txt  Interfaz.txt  comunicacion tiempo real sensores.txt
hardware/: bill_of_materials.md
ros2_ws/: .gitignore
ros2_ws/src/tesis_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/tesis_launch/launch/: script_launch.py
ros2_ws/src/tesis_launch/tesis_launch/: POCHITA_v30.stl  camarafiltro.py  can_node.py  comandos_pub.py  comandos_sus.py  gps.py  image_publisher.py  image_sus.py  interfaz.py  interfaz_open3d.py  prueba_stl.py  prueba_stl_sinvtk.py  rviz_launcher_node.py
ros2_ws/src/tesis_launch/tesis_launch/rviz/: my_rviz_config.rviz
