<?xml version="1.0"?>
<package format="3">
  <name>tesis_launch</name>
  <version>0.0.0</version>
  <description>Paquete de lanzamiento para mi robot</description>
  <maintainer email="tu_email@example.com">tu_nombre</maintainer>
  <license>MIT</license>

  <!-- Dependencias de build y ejecución -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  

  <!-- Opcional: Testeo -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exportar la información del paquete -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
